adding another recipe for corn on the cob

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href = ./recipes/hamburger.html>Hamburger</a>
+    <ul>
+        <li> <a href = ./recipes/hamburger.html>Hamburger</a></li>
+        <li> <a href = ./recipes/cornonthecob.html>Corn on the cob</a></li>
+    </ul>
+   
 </body>
 </html>
