--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <ul>
         <li> <a href = ./recipes/hamburger.html>Hamburger</a></li>
         <li> <a href = ./recipes/cornonthecob.html>Corn on the cob</a></li>
+        <li> <a href = ./recipes/pastasalad.html>Pasta Salad</a></li>
     </ul>
    
 </body>
